ingress/external-argocd.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd
spec:
  type: ExternalName
  externalName: argocd-server.argocd.svc.cluster.local
