ingress/external-grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  type: ExternalName
  externalName: grafana.grafana.svc.cluster.local
