ingress/external-holdem.yaml
apiVersion: v1
kind: Service
metadata:
  name: holdem
spec:
  type: ExternalName
  externalName: holdem-front.holdem.svc.cluster.local
