ingress/external-kubernetes-dashboard.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard
spec:
  type: ExternalName
  externalName: kubernetes-dashboard.kubernetes-dashboard.svc.cluster.local
