ingress/external-lapi-hotel-system.yaml
apiVersion: v1
kind: Service
metadata:
  name: lapi-hotel-system
spec:
  type: ExternalName
  externalName: lapi-hotel-system-service.lapi-hotel-system.svc.cluster.local
