ingress/external-lapi-website-gatsby.yaml
apiVersion: v1
kind: Service
metadata:
  name: lapi-website-gatsby
spec:
  type: ExternalName
  externalName: lapi-website-gatsby-service.lapi-website-gatsby.svc.cluster.local
