ingress/external-nuc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nuc
spec:
  type: ExternalName
  externalName: 192.168.10.102
