ingress/external-owncloud.yaml
apiVersion: v1
kind: Service
metadata:
  name: owncloud
spec:
  type: ExternalName
  externalName: owncloud.owncloud.svc.cluster.local
