ingress/external-passbolt.yaml
apiVersion: v1
kind: Service
metadata:
  name: passbolt
spec:
  type: ExternalName
  externalName: passbolt.passbolt.svc.cluster.local
