ingress/external-pritunl.yaml
apiVersion: v1
kind: Service
metadata:
  name: pritunl
spec:
  type: ExternalName
  externalName: pritunl.pritunl.svc.cluster.local
