ingress/external-prometheus.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
spec:
  type: ExternalName
  externalName: prometheus.prometheus.svc.cluster.local
