ingress/ingress-argocd.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argocd
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"

spec:
  tls:
    - hosts:
        - argocd.lapi.gq
      secretName: argocd-tls
  rules:
    - host: argocd.lapi.gq
      http:
        paths:
          - path: /
            backend:
              serviceName: argocd
              servicePort: 443
