ingress/ingress-grafana.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"

spec:
  tls:
    - hosts:
        - grafana.lapi.gq
      secretName: grafana-tls
  rules:
    - host: grafana.lapi.gq
      http:
        paths:
          - path: /
            backend:
              serviceName: grafana
              servicePort: 443
