ingress/ingress-holdem.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: holdem
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"

spec:
  tls:
    - hosts:
        - poker.lapi.gq
      secretName: holdem-tls
  rules:
    - host: poker.lapi.gq
      http:
        paths:
          - path: /
            backend:
              serviceName: holdem-front
              servicePort: 3000
          - path: /api/
            backend:
              serviceName: holdem-server
              servicePort: 8765
