ingress/ingress-k8s.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8s
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"

spec:
  tls:
    - hosts:
        - k8s.lapi.gq
      secretName: k8s-tls
  rules:
    - host: k8s.lapi.gq
      http:
        paths:
          - path: /
            backend:
              serviceName: kubernetes-dashboard
              servicePort: 443
          - path: /dashboard
            backend:
              serviceName: kubernetes-dashboard
              servicePort: 443
