ingress/ingress-lapi-hotel-system.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: lapi-hotel-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"

spec:
  tls:
    - hosts:
        - api.lapi.tokyo
      secretName: lapi-hotel-system-tls
  rules:
    - host: api.lapi.tokyo
      http:
        paths:
          - path: /graphql
            backend:
              serviceName: lapi-hotel-system
              servicePort: 4000
