ingress/ingress-lapi-website-gatsby.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: lapi-website-gatsby
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"

spec:
  tls:
    - hosts:
        - www.lapi.tokyo
      secretName: lapi-website-gatsby-tls
  rules:
    - host: www.lapi.tokyo
      http:
        paths:
          - path: /
            backend:
              serviceName: lapi-website-gatsby
              servicePort: 80
