ingress/ingress-nuc.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nuc
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"

spec:
  tls:
    - hosts:
        - utfurry.tk
        - wiki.utfurry.tk
        - cloud.utfurry.tk
      secretName: nuc-tls
  rules:
    - host: utfurry.tk
      http:
        paths:
          - path: /
            backend:
              serviceName: nuc
              servicePort: 443
    - host: wiki.utfurry.tk
      http:
        paths:
          - path: /
            backend:
              serviceName: nuc
              servicePort: 443
    - host: cloud.utfurry.tk
      http:
        paths:
          - path: /
            backend:
              serviceName: nuc
              servicePort: 443
