ingress/ingress-owncloud.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: owncloud
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"

spec:
  tls:
    - hosts:
        - cloud.tyoutugai.tk
      secretName: owncloud-tls
  rules:
    - host: cloud.tyoutugai.tk
      http:
        paths:
          - path: /
            backend:
              serviceName: owncloud
              servicePort: 8080
