ingress/ingress-passbolt.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: passbolt
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"

spec:
  tls:
    - hosts:
        - passbolt.lapi.gq
      secretName: passbolt-tls
  rules:
    - host: passbolt.lapi.gq
      http:
        paths:
          - path: /
            backend:
              serviceName: passbolt
              servicePort: 443
