ingress/ingress-pritunl.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pritunl
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"

spec:
  tls:
    - hosts:
        - vpn.lapi.gq
      secretName: pritunl-tls
  rules:
    - host: vpn.lapi.gq
      http:
        paths:
          - path: /
            backend:
              serviceName: pritunl
              servicePort: 80
