ingress/ingress-prometheus.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"

spec:
  tls:
    - hosts:
        - prometheus.lapi.tokyo
      secretName: prometheus-tls
  rules:
    - host: prometheus.lapi.tokyo
      http:
        paths:
          - path: /
            backend:
              serviceName: prometheus
              servicePort: 9090
